refactor(help): simplify list access in help flow
Use getFirst() for single-item accesses and simplify verbose query fallback handling in server help.